welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:71: error: illegal start of simple pattern
  for (<-1 to 3){
       ^PictureMono3:74: error: '<-' expected but '}' found.
} 
^